# bspline_trajectory_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/: common_utils_ros.h  trajectory_server_ros.h
launch/: sample.launch
scripts/: send_fake_pose.py  send_target.py
src/: main.cpp  trajectory_server_ros.cpp
